fix(modal): adjust scrollbar behavior for better content visibility

--- a/packages/mantine/src/styles/Modal.module.css
+++ b/packages/mantine/src/styles/Modal.module.css
@@ -12,13 +12,13 @@
 }
 
 .content {
-    overflow-y: initial;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .body {
-    overflow-y: scroll;
+    overflow-y: auto;
     border-end-start-radius: var(--modal-radius, var(--mantine-radius-default));
     border-end-end-radius: var(--modal-radius, var(--mantine-radius-default));
 }
